--- a/.gitignore
+++ b/.gitignore
@@ -73,6 +73,8 @@ web_modules/
 .env
 .env.test
 .env.production
+package-lock.json
+.gitignore
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
